# ffplay

./: CMakeLists.txt  cmdutils.c  config.h  ffplay.c  main.c
